# unjournal_gitbook

./: .gitignore  AGENTS.md  CLAUDE.md  HEAD.md  README (1).md  README.md  SUMMARY.md  UPDATES.md  UPDATES_not_in_gitbook.md  action-build-founding-committee.md  action-set-up-platforms.md  doaj-application-draft.md  hyperscalar  index.html  key-issues-explanations-faq.md  main.py  pyproject.toml  the-field-and-ea-gp-research.md  unjournaltoc.mermaid
.claude/: settings.local.json
action-and-progress/: README.md  action-build-founding-committee.md  action-identify-pilot-key-projects-papers.md  action-set-up-platforms.md  evaluation-referee-guidelines-for-pilot-papers.md  evaluators-guidelines-for-pilot-papers.md  evaluators-reviewers-identify-contact-engage.md
docs/: gallery.html  (+5 more)
unjournal-forum-bot/: .gitignore  README.md  config.example.toml  pyproject.toml
unjournal-forum-bot/drafts/: evaluator-prizes-bluesky.txt  evaluator-prizes-linkedin.txt  evaluator-prizes-thread.txt  instagram-setup-guide.txt  youtube-process-video-social.txt  youtube-unjournal-process-video.txt
unjournal-forum-bot/scripts/: capture_credentials.md  dlvrit_setup.py  introspect_schema.py  test_auth.py
unjournal-forum-bot/src/unjournal_forum_bot/: __init__.py  algolia.py  bluesky_runner.py  cli.py  comment_template.py  config.py  dedup.py  graphql.py  logging_setup.py  matching.py  models.py  papers.py  rate_limiter.py  runner.py  state.py
unjournal-forum-bot/src/unjournal_forum_bot/forum_client/: __init__.py  base.py  eaforum.py  lesswrong.py
unjournal-forum-bot/src/unjournal_forum_bot/social/: __init__.py  bluesky.py  dlvrit.py
unjournal-forum-bot/tests/: conftest.py  test_comment_template.py  test_dedup.py  test_matching.py  test_papers.py
unjournal-forum-bot/tests/fixtures/: sample_papers.csv
(+459 files in other folders)
