[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unjournal-forum-bot"
version = "0.1.0"
description = "CLI tool to find and comment on EA Forum posts about Unjournal-evaluated papers"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "scikit-learn>=1.4",
]

[project.scripts]
forum-bot = "unjournal_forum_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unjournal_forum_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
