[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unjournal-forum-bot"
version = "0.1.0"
description = "CLI tool to find and comment on EA Forum posts about Unjournal-evaluated papers"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
forum-bot = "unjournal_forum_bot.cli:main"
